# Smart-SCID

./: .gitignore  README.md  pyproject.toml  requirements.txt
.qwen/: settings.json
accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py
accounts/api/v1/: serializers.py  urls.py  views.py
accounts/api/v1/openapi/: __init__.py  schema.py
accounts/migrations/: 0001_initial.py  0002_remove_patient_national_code_and_more.py  0003_remove_overview_age_remove_overview_occupation_and_more.py  0004_alter_overview_alcohol_use_and_more.py
core/: settings.py  urls.py
interview/: DIAGNOSIS_ALGORITHM.md  admin.py  apps.py  models.py  tests.py  urls.py
interview/api/v1/: serializers.py  urls.py  views.py
interview/api/v1/openapi/: schema.py
interview/data/: module_a.json  module_b.json  module_c.json  module_d.json  module_e.json  module_f.json  module_g.json
interview/management/commands/: load_interview_data.py
interview/migrations/: 0001_initial.py  0002_alter_jumprule_to_question.py  0003_interview_created_at_interview_updated_at_and_more.py  0004_alter_jumprule_condition_type.py
interview_sessions/: apps.py
smart_scid/: manage.py
smart_scid/smart_scid/: asgi.py  settings.py  urls.py  wsgi.py
static/admin/css/: custom_admin.css
templates/admin/: base_site.html
utils/: __init__.py  read_pdf.py  sms.py
